--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>heading 1</h1>
-    <h2>heading 2</h2>
-    <h3>heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
-      aliquid repellendus, modi veritatis iste vitae aut quae voluptatibus
-      voluptatum libero!
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
