--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto+Mono:wght@500&family=Russo+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Roboto+Mono:wght@500&family=Russo+One&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <a href="#" class="link-arrow">Learn More</a>
+    <span class="badge badge--primary badge--small">10% Off</span>
+    <!-- <span class="badge badge--secondary">20% Off</span> -->
   </body>
 </html>
