--- a/index.html
+++ b/index.html
@@ -14,8 +14,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <span class="badge badge--primary badge--small">10% Off</span>
-    <!-- <span class="badge badge--secondary">20% Off</span> -->
-  </body>
+  <body></body>
 </html>
