--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
+  <body style="padding: 5rem">
     <svg display="none">
       <defs>
         <g id="img-chevron">
