--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="It is a imaginary cloud hosting website.Deploy your website in less than 60 sec."
+    />
+    <meta property="og:title" content="Moshify...." />
+    <meta property="og:description" content="Moshify...." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="website" />
+
+    <title>Imaginary Cloud Hosting Website- Go online for Just $9</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -696,7 +705,7 @@
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Item 1</h2>
             <svg
               class="icon icon--white collapsible__chevron"
@@ -709,14 +718,14 @@
             >
               <use xlink:href="#img-chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
             ab.
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Item 2</h2>
             <svg
               class="icon icon--white collapsible__chevron"
@@ -729,7 +738,7 @@
             >
               <use xlink:href="#img-chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Website Hosting</a></li>
@@ -739,7 +748,7 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Item 3</h2>
             <svg
               class="icon icon--white collapsible__chevron"
@@ -752,16 +761,16 @@
             >
               <use xlink:href="#img-chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
             ab.
           </div>
         </section>
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright Somya Singhal</p>
-        </section>
+        </div>
       </div>
     </footer>
 
