Add parcel for building

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="Moshify...." />
     <meta property="og:description" content="Moshify...." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="website" />
-
+    <meta property="og:image" content="http://" />
+    <meta property="og:url" content="https://moshified.com" />
     <title>Imaginary Cloud Hosting Website- Go online for Just $9</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -259,7 +259,7 @@
           version="1.1"
           preserveAspectRatio="xMinYMin"
         >
-          <use xlink:href="#img-search"></use>
+          <use href="#img-search"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -315,7 +315,7 @@
             version="1.1"
             preserveAspectRatio="xMinYMin"
           >
-            <use xlink:href="#img-search"></use>
+            <use href="#img-search"></use>
           </svg>
           Search
         </button>
@@ -413,7 +413,7 @@
               version="1.1"
               preserveAspectRatio="xMinYMin"
             >
-              <use xlink:href="#img-easy"></use>
+              <use href="#img-easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy To Use</h3>
@@ -447,7 +447,7 @@
               version="1.1"
               preserveAspectRatio="xMinYMin"
             >
-              <use xlink:href="#img-computer"></use>
+              <use href="#img-computer"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -479,7 +479,7 @@
               version="1.1"
               preserveAspectRatio="xMinYMin"
             >
-              <use xlink:href="#img-wordpress"></use>
+              <use href="#img-wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -511,7 +511,7 @@
               version="1.1"
               preserveAspectRatio="xMinYMin"
             >
-              <use xlink:href="#img-clock"></use>
+              <use href="#img-clock"></use>
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -561,7 +561,7 @@
                   version="1.1"
                   preserveAspectRatio="xMinYMin"
                 >
-                  <use xlink:href="#img-snap"></use>
+                  <use href="#img-snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -587,7 +587,7 @@
                   version="1.1"
                   preserveAspectRatio="xMinYMin"
                 >
-                  <use xlink:href="#img-growth"></use>
+                  <use href="#img-growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -613,7 +613,7 @@
                   version="1.1"
                   preserveAspectRatio="xMinYMin"
                 >
-                  <use xlink:href="#img-wordpress"></use>
+                  <use href="#img-wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -651,7 +651,7 @@
                   version="1.1"
                   preserveAspectRatio="xMinYMin"
                 >
-                  <use xlink:href="#img-quotes"></use>
+                  <use href="#img-quotes"></use>
                 </svg>
               </span>
             </div>
@@ -673,7 +673,7 @@
                       version="1.1"
                       preserveAspectRatio="xMinYMin"
                     >
-                      <use xlink:href="#img-line"></use>
+                      <use href="#img-line"></use>
                     </svg>
                   </div>
                   <div class="media__body">
@@ -716,7 +716,7 @@
               version="1.1"
               preserveAspectRatio="xMinYMin"
             >
-              <use xlink:href="#img-chevron"></use>
+              <use href="#img-chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -736,7 +736,7 @@
               version="1.1"
               preserveAspectRatio="xMinYMin"
             >
-              <use xlink:href="#img-chevron"></use>
+              <use href="#img-chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -759,7 +759,7 @@
               version="1.1"
               preserveAspectRatio="xMinYMin"
             >
-              <use xlink:href="#img-chevron"></use>
+              <use href="#img-chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
